--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		
 		<title>FindInfo | Group 326 BUPT</title>
 		<meta name="description" content="消息传播路径分及展现">
-		<meta name="author" content="杨晟、甘宇明、叶基伟、张若曦、张文宇">
+		<meta name="author" content="张文宇、杨晟、甘宇明、叶基伟、张若曦">
 
 		<!-- Mobile Meta -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -1003,9 +1003,9 @@
 </p>
 								<ul class="list-icons">
 									<li><i class="fa fa-map-marker pr-10"></i> 北京市海淀区西土城路10号国际学院</li>
-									<li><i class="fa fa-phone pr-10"></i> +86 18811412621</li>
+									<li><i class="fa fa-phone pr-10"></i> +86 136599709445</li>
 									<li><i class="fa fa-fax pr-10"></i> +010 58828088 </li>
-									<li><i class="fa fa-envelope-o pr-10"></i> 2012213063@bupt.edu.cn</li>
+									<li><i class="fa fa-envelope-o pr-10"></i> wenyu_zh@yeah.net</li>
 								</ul>
 								<ul class="social-links">
 									<li class="facebook"><a target="_blank" href="https://www.facebook.com/pages/HtmlCoder/714570988650168"><i class="fa fa-facebook"></i></a></li>
@@ -1052,7 +1052,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12">
-							<p class="text-center">Copyright © 2015  FindInfo  by <a target="_blank" href="http://www.bupt.edu.cn">BUPT</a>.</p>
+							<p class="text-center">Created by Wenyu, Copyright © 2015  FindInfo  by <a target="_blank" href="http://www.bupt.edu.cn">BUPT</a>.</p>
 						</div>
 					</div>
 				</div>
